--- a/templates/index.html
+++ b/templates/index.html
@@ -41,8 +41,13 @@
     </script>
 </head>
 <body>
-    <h1>🔥 Shironeko Burn Tracker 🔥</h1>
-    <p>총 소각된 SHIRONEKO: <span id="burnedAmount">로딩 중...</span></p>
+    <h1>🔥 $Shiro Neko Supply 🔥</h1>
+    <p>Total burnt from initial supply: <span id="burnedAmount">Loading...</span></p>
+    <p>Max Total Supply: <span id="burnedAmount">Loading...</span></p>
+    <p>Total Supply: <span id="burnedAmount">Loading...</span></p>
+    <p>Circulating Supply: <span id="burnedAmount">Loading...</span></p>
+    <p>For Staking: <span id="burnedAmount">Loading...</span></p>
+    <p>Community: <span id="burnedAmount">Loading...</span></p>
 
     <!-- Google AdSense 광고 (페이지 상단) -->
     <div style="text-align: center; margin: 20px 0;">
