--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                 console.log("🔥 API 응답 데이터:", dataBurned); // 디버깅용
 
                 if (dataBurned && dataBurned.total_burned !== undefined) {
-                    document.getElementById("burnedAmount").textContent = dataBurned.total_burned.toFixed(2) + " $SHIRO";
+                    document.getElementById("burnedAmount").textContent = dataBurned.total_burned.toLocaleString() + " $SHIRO";//toFixed(2) + " $SHIRO";
                 } else {
                     document.getElementById("burnedAmount").textContent = "데이터 오류";
                 }
